# MakeItMineV2_5

./: .gitignore  BUILD_VERSION.txt  MakeItMine.sh  Makefile  README.md  pyproject.toml
src/MakeItMineV2_5/: djmake.py  dkmake.py  gtmake.py  make.py  oldmake.py  pjmake.py  pymake.py
